--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
       /* Стили для скроллбара (применяются ко всем) */
     }
     #servicesContainer::-webkit-scrollbar {
-        width: 5px;
+      width: 5px;
     }
     #servicesContainer::-webkit-scrollbar-thumb {
         background-color: rgba(0, 0, 0, 0.15);
         border-radius: 3px;
     }
     #servicesContainer::-webkit-scrollbar-track {
-        background: transparent;
+      background: transparent;
     }
 
     /* Стили для контейнера тегов на мобильных (переопределение) */
@@ -212,7 +212,7 @@
     <section>
       <h2 class="text-2xl font-semibold mb-6 text-center text-gray-900 tracking-tight">Календарь записи клиентов</h2>
       <div class="bg-white rounded-3xl shadow-lg max-w-4xl mx-auto p-8 border border-gray-200">
-        <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-8 space-y-5 md:space-y-0">
+        <div class="flex flex-col items-center md:flex-row md:items-center md:justify-between mb-8 space-y-5 md:space-y-0">
           <div class="flex items-center space-x-3">
             <button id="prevMonth" aria-label="Предыдущий месяц" class="flex items-center justify-center w-10 h-10 rounded-full hover:bg-gray-100 transition text-gray-700 focus:ring-2 focus:ring-blue-500 focus:outline-none">
               <i class="fas fa-chevron-left text-lg"></i>
