--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     }
     .service-tag-line1 span { /* Чтобы текст мог переноситься, если нужно */
         display: inline-block;
+        font-weight: 600; /* Делаем название жирным */
     }
 
     /* Стили для строки с ценой */
