--- a/index.html
+++ b/index.html
@@ -362,53 +362,98 @@
     <!-- Стоимость услуг -->
     <section class="mb-12">
       <h2 class="text-2xl font-semibold mb-6 text-center text-gray-900 tracking-tight">Стоимость услуг</h2>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-7xl mx-auto">
-        <div class="bg-white rounded-3xl shadow-lg p-8 border border-gray-200">
-          <h3 class="text-xl font-semibold mb-5 border-b border-gray-200 pb-3 text-gray-900 tracking-tight">Будние дни</h3>
-          <ul class="space-y-4 text-gray-700 text-base leading-relaxed">
+      <div class="bg-white rounded-3xl shadow-lg p-8 border border-gray-200 max-w-3xl mx-auto">
+        <ul class="space-y-4 text-gray-800 text-base leading-relaxed grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-4">
+            
             <li class="flex items-center space-x-3">
-              <i class="fas fa-vr-cardboard text-blue-600 text-lg flex-shrink-0"></i>
-              <span>VR очки — 500 руб./час (половина часа 250 руб)</span>
+              <i class="fas fa-gamepad w-5 text-center text-indigo-600"></i> 
+              <span>PS5 (1 джойстик) — 150 ₽/час</span>
             </li>
             <li class="flex items-center space-x-3">
-              <i class="fas fa-gamepad text-blue-600 text-lg flex-shrink-0"></i>
-              <span>PS за 1 джойстик — 150 руб./час</span>
+              <i class="fas fa-gamepad w-5 text-center text-indigo-600"></i> 
+              <span>PS5 (2 джойстика) — 300 ₽/час</span>
             </li>
-          </ul>
-        </div>
-        <div class="bg-white rounded-3xl shadow-lg p-8 border border-gray-200">
-          <h3 class="text-xl font-semibold mb-5 border-b border-gray-200 pb-3 text-gray-900 tracking-tight">Выходные дни</h3>
-          <ul class="space-y-4 text-gray-700 text-base leading-relaxed">
+            
             <li class="flex items-center space-x-3">
-              <i class="fas fa-vr-cardboard text-indigo-600 text-lg flex-shrink-0"></i>
-              <span>VR очки — 750 руб./час (половина часа 350 руб)</span>
+               <i class="fas fa-vr-cardboard w-5 text-center text-blue-600"></i> 
+               <span>VR очки (1 шт.) | Будни — 500 ₽/час</span>
+            </li>
+             <li class="flex items-center space-x-3">
+               <i class="fas fa-vr-cardboard w-5 text-center text-blue-600"></i> 
+               <span>VR очки (2 шт.) | Будни — 1000 ₽/час</span>
+            </li>
+             <li class="flex items-center space-x-3">
+               <i class="fas fa-vr-cardboard w-5 text-center text-blue-600"></i> 
+               <span>VR очки (3 шт.) | Будни — 1500 ₽/час</span>
+            </li>
+             <li class="flex items-center space-x-3">
+               <i class="fas fa-vr-cardboard w-5 text-center text-blue-600"></i> 
+               <span>VR очки (4 шт.) | Будни — 2000 ₽/час</span>
+            </li>
+
+            <li class="flex items-center space-x-3">
+               <i class="fas fa-vr-cardboard w-5 text-center text-blue-600"></i> 
+               <span>VR очки (1 шт.) | Выходные — 750 ₽/час</span>
             </li>
             <li class="flex items-center space-x-3">
-              <i class="fas fa-gamepad text-indigo-600 text-lg flex-shrink-0"></i>
-              <span>PS за 1 джойстик — 250 руб./час</span>
+               <i class="fas fa-vr-cardboard w-5 text-center text-blue-600"></i> 
+               <span>VR очки (2 шт.) | Выходные — 1500 ₽/час</span>
             </li>
-          </ul>
-        </div>
-        <div class="bg-white rounded-3xl shadow-lg p-8 border border-gray-200">
-          <h3 class="text-xl font-semibold mb-5 border-b border-gray-200 pb-3 text-gray-900 tracking-tight">День рождения</h3>
-          <ul class="space-y-3 text-gray-700 text-base leading-relaxed">
-            <li>Первый час — 4000 руб.</li>
-            <li>Второй час — 3500 руб.</li>
-            <li>Третий час — 3000 руб.</li>
-            <li>Четвертый и далее — 3000 руб./час</li>
-          </ul>
-          <p class="mt-5 font-semibold text-gray-900 tracking-tight">В стоимость входит аренда всего помещения:</p>
-          <ul class="list-disc list-inside text-gray-700 space-y-1 mt-2 text-base leading-relaxed">
-            <li>VR очки</li>
-            <li>PS комната</li>
-            <li>Караоке</li>
-            <li>Кино</li>
-            <li>XBOX 360</li>
-            <li>Танцы в XBOX</li>
-            <li>Игры на ПК</li>
-          </ul>
-          <p class="mt-4 text-gray-500 italic text-sm">Можно заказать свою еду и напитки</p>
-        </div>
+             <li class="flex items-center space-x-3">
+               <i class="fas fa-vr-cardboard w-5 text-center text-blue-600"></i> 
+               <span>VR очки (3 шт.) | Выходные — 2250 ₽/час</span>
+            </li>
+             <li class="flex items-center space-x-3">
+               <i class="fas fa-vr-cardboard w-5 text-center text-blue-600"></i> 
+               <span>VR очки (4 шт.) | Выходные — 3000 ₽/час</span>
+            </li>
+
+            <li class="flex items-center space-x-3">
+               <i class="fas fa-child w-5 text-center text-orange-600"></i> 
+               <span>X-Box Kinnect (до 8 чел.) — 500 ₽/час</span>
+            </li>
+            <li class="flex items-center space-x-3">
+               <i class="fas fa-gamepad w-5 text-center text-green-600"></i> 
+               <span>X-Box (1 джойстик) — 250 ₽/час</span>
+            </li>
+            <li class="flex items-center space-x-3">
+               <i class="fas fa-gamepad w-5 text-center text-green-600"></i> 
+               <span>X-Box (2 джойстика) — 500 ₽/час</span>
+            </li>
+            <li class="flex items-center space-x-3">
+               <i class="fas fa-gamepad w-5 text-center text-green-600"></i> 
+               <span>X-Box (3 джойстика) — 750 ₽/час</span>
+            </li>
+            <li class="flex items-center space-x-3">
+               <i class="fas fa-gamepad w-5 text-center text-green-600"></i> 
+               <span>X-Box (4 джойстика) — 1000 ₽/час</span>
+            </li>
+
+            <li class="flex items-center space-x-3">
+               <i class="fas fa-microphone w-5 text-center text-pink-600"></i> 
+               <span>Караоке — 1000 ₽/час</span>
+            </li>
+            <li class="flex items-center space-x-3">
+               <i class="fas fa-dice-d6 w-5 text-center text-purple-600"></i> 
+               <span>Настольные игры — 500 ₽/час</span>
+            </li>
+
+            <!-- День рождения -->
+             <li class="flex items-start space-x-3 md:col-span-2 mt-4 pt-4 border-t border-gray-200"> 
+               <i class="fas fa-birthday-cake w-5 text-center text-red-600 mt-1"></i> 
+               <div>
+                    <span class="font-semibold">Аренда всего (День Рождения):</span>
+                    <ul class="list-disc list-inside mt-1 text-gray-700 text-sm pl-2 space-y-1">
+                         <li>1-й час — 4000 руб.</li>
+                         <li>2-й час — 3500 руб.</li>
+                         <li>3-й час — 3000 руб.</li>
+                         <li>4-й и далее — 3000 руб./час</li>
+                    </ul>
+                    <p class="mt-2 text-xs text-gray-500 italic">Включает аренду всего помещения и всех доступных развлечений.</p>
+               </div>
+            </li>
+
+        </ul>
       </div>
     </section>
   </main>
