--- a/index.html
+++ b/index.html
@@ -1398,6 +1398,8 @@
         duration: parseFloat(bookingForm.duration.value),
         selectedServices: Array.from(selectedServices), // Сохраняем выбранные услуги
         notes: bookingForm.notes.value.trim(),
+        discountPercent: parseFloat(bookingForm.discountPercent.value) || 0, // Сохраняем скидку %
+        discountAmount: parseFloat(bookingForm.discountAmount.value) || 0, // Сохраняем скидку ₽
       };
 
         // --- Валидация ---
@@ -2238,6 +2240,9 @@
 
       const durationSelect = document.getElementById('duration'); // Получаем элемент выбора длительности
       durationSelect.addEventListener('input', calculateTotal); // Добавляем слушатель для пересчета
+
+      // --- Модальное окно деталей дня ---
+      closeDayDetailsModalBtn.addEventListener('click', () => dayDetailsModal.classList.add('hidden'));
     }
 
     // === Вспомогательные функции для отображения ===
@@ -2556,14 +2561,111 @@
                  }
                 const servicesHTML = `<div class="text-sm text-gray-700 mb-2"><span class="font-medium">Услуги:</span> ${serviceLabels}</div>`;
 
+                // --- Добавляем Финансовую информацию ---
+                let financialHTML = '';
+                // Пересчитываем сумму до скидки
+                let totalAmount = 0;
+                const duration = parseFloat(b.duration) || 0;
+                if (b.selectedServices && Array.isArray(b.selectedServices)) {
+                     b.selectedServices.forEach(service => {
+                       if (service === 'birthday') {
+                         const fullHours = Math.floor(duration);
+                         const hasHalfHour = duration % 1 !== 0;
+                         let birthdayTotal = 0;
+                         for (let hour = 1; hour <= fullHours; hour++) {
+                           const hourPrice = servicePrices.birthday[hour] || servicePrices.birthday[4] || 3000;
+                           birthdayTotal += hourPrice;
+                         }
+                         if (hasHalfHour) {
+                            if (fullHours === 0) { birthdayTotal += 2000; }
+                            else if (fullHours === 1) { birthdayTotal += 2000; }
+                            else { birthdayTotal += (servicePrices.birthday[3] || 3000) / 2; }
+                         }
+                         totalAmount += birthdayTotal;
+                       } else {
+                         const price = servicePrices[service] || 0;
+                         totalAmount += price * duration;
+                       }
+                     });
+                }
+
+                // Рассчитываем итоговую стоимость с учетом скидки
+                const discountPercent = b.discountPercent || 0;
+                const discountAmount = b.discountAmount || 0;
+                let finalAmount = totalAmount;
+                let discountText = 'Нет';
+                if (discountPercent > 0) {
+                  finalAmount = totalAmount * (1 - discountPercent / 100);
+                  discountText = `${discountPercent}%`;
+                } else if (discountAmount > 0) {
+                  finalAmount = Math.max(0, totalAmount - discountAmount);
+                  discountText = `${discountAmount.toLocaleString('ru-RU')} ₽`;
+                }
+
+                financialHTML = `
+                  <div class="grid grid-cols-3 gap-x-4 text-sm mt-3 pt-3 border-t border-gray-100">
+                    <div><span class="font-medium">Сумма:</span> ${totalAmount.toLocaleString('ru-RU')} ₽</div>
+                    <div><span class="font-medium">Скидка:</span> ${discountText}</div>
+                    <div><span class="font-medium">Итого:</span> ${finalAmount.toLocaleString('ru-RU', { maximumFractionDigits: 0 })} ₽</div>
+                  </div>
+                `;
+                // --- Конец Финансовой информации ---
+
                 // Формируем блок примечаний
                 let notesHTML = '';
                 if (b.notes) {
                     notesHTML = `<div class="text-sm text-gray-500 italic whitespace-pre-wrap break-words border-t border-gray-100 pt-2 mt-2"><span class="font-medium text-gray-700 not-italic">Примечания:</span> ${b.notes}</div>`;
                 }
 
+                // Находим назначение на этот день ОДИН РАЗ
+                const assignmentDateStr = formatDateSafe(date);
+                const assignment = adminAssignments.find(a => a.date === assignmentDateStr);
+                let assignmentHTML = '';
+                if (assignment) {
+                    const mainAdmin = admins.find(a => a.id === assignment.mainAdminId);
+                    const helperAdmin = assignment.helperAdminId ? admins.find(a => a.id === assignment.helperAdminId) : null;
+                    assignmentHTML = '<div class="text-xs text-gray-500 mt-1">Смена: ';
+                    if (mainAdmin) assignmentHTML += `👑 ${mainAdmin.name}`;
+                    if (helperAdmin) assignmentHTML += ` / 🛠️ ${helperAdmin.name}${assignment.helperHours ? ' (' + assignment.helperHours + 'ч)' : ''}`;
+                    assignmentHTML += '</div>';
+                }
+
                 // Собираем карточку
-                bookingCard.innerHTML = clientHTML + timeHTML + servicesHTML + notesHTML;
+                bookingCard.innerHTML = clientHTML + timeHTML + servicesHTML + financialHTML + assignmentHTML + notesHTML;
+
+                // --- Добавляем Кнопки действий (только для админа) ---
+                if (isAdmin) {
+                    const actionsDiv = document.createElement('div');
+                    actionsDiv.className = 'flex items-center space-x-3 mt-3 pt-3 border-t border-gray-100';
+
+                    const editBtn = document.createElement('button');
+                    editBtn.type = 'button';
+                    editBtn.className = 'text-blue-600 hover:text-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-400 rounded p-1 text-sm inline-flex items-center';
+                    editBtn.innerHTML = '<i class="fas fa-edit fa-fw mr-1"></i> Редакт.';
+                    editBtn.addEventListener('click', (e) => {
+                        e.stopPropagation();
+                        dayDetailsModal.classList.add('hidden'); // Закрываем текущее окно
+                        openEditModal(b.id); // Открываем окно редактирования
+                     });
+
+                    const deleteBtn = document.createElement('button');
+                    deleteBtn.type = 'button';
+                    deleteBtn.className = 'text-red-600 hover:text-red-800 focus:outline-none focus:ring-2 focus:ring-red-400 rounded p-1 text-sm inline-flex items-center';
+                    deleteBtn.innerHTML = '<i class="fas fa-trash-alt fa-fw mr-1"></i> Удалить';
+                    deleteBtn.addEventListener('click', (e) => {
+                        e.stopPropagation();
+                        if (confirm(`Вы уверены, что хотите удалить запись для "${b.clientName}"?`)) {
+                            dayDetailsModal.classList.add('hidden'); // Закрываем текущее окно
+                            deleteBooking(b.id);
+                        }
+                    });
+
+                    actionsDiv.appendChild(editBtn);
+                    actionsDiv.appendChild(deleteBtn);
+                    bookingCard.appendChild(actionsDiv);
+                }
+                // --- Конец Кнопок действий ---
+
                 dayDetailsContent.appendChild(bookingCard);
             });
         }
